# symile

./: .gitignore  README.md  pyproject.toml
examples/: args.py  binary_xor.py  datasets.py  main.py
experiments/: README.md  args.py  constants.py  datasets.py  utils.py
experiments/env/: environment.yml  requirements.txt
experiments/models/: symile_mimic_model.py
experiments/synthetic_data/: datasets.py  losses.py  main.py  models.py  params.py
src/: args.py  collect_tuning_results.py  constants.py  datasets.py  datasets_sodium.py  losses.py  main.py  main_sodium.py  test.py  utils.py
src/binary/: args.py  datasets.py  information_measures.py  informations.py  main.py  models.py  utils.py
src/healthcare/: args.py  constants.py  datasets.py  main.py  models.py
src/high_dim/: args.py  constants.py  cv_processing.py  datasets.py  generate_data.py  main.py  models.py  save_representations.py
src/high_dim_original/: args.py  constants.py  data_reference.json  data_reference_old.json  generate_data.py  main.py  models.py  save_representations.py  source_data.py
src/high_dim_xor/: args.py  constants.py  datasets.py  generate_data.py  models.py  save_representations.py
src/high_dimensional/: sanity_check.py
src/high_dimensional_xor/: args.py  constants.py  generate_data.py  heatmaps.py  models.py  save_data_locally.py
src/models/: binary_xor_8_model.py  (+5 more)
symile/: args.py  collect_tuning_results.py  collect_tuning_results_missingness.py  datasets.py  loss.py  losses.py  losses_n_modes.py  main.py  similarity.py  symile_m3_args.py  test.py  utils.py
(+450 files in other folders)
