[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "symile"
version = "1.0.0"
authors = [
  { name="Adriel Saporta", email="adriel@nyu.edu" },
]
description = "Package to demonstrate SYMILE loss."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy",
    "pandas",
]

[project.urls]
"Homepage" = "https://github.com/rajesh-lab/symile"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]