[tool.poetry]
name = "symile"
version = "0.1.0"
description = "Symile"
authors = ["Adriel Saporta <adriel@nyu.edu>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
torch = "^2.4.1"

[tool.poetry.group.examples]
optional = true

[tool.poetry.group.examples.dependencies]
numpy = "^2.1.2"
scipy = "^1.14.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
